# OpenGL-Renderer

./: CMakeLists.txt  CMakePresets.json  main
Application/: main  main.cpp
Builds/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  OpenGL_Renderer  cmake_install.cmake  compile_commands.json
Builds/.cmake/api/v1/reply/: cache-v2-415955cae26c30097e09.json  cache-v2-522ffbb1d6d4f8666526.json  cache-v2-cd27fe4d2ee15c1981c1.json  cache-v2-f3cc0c34ef89262bbdc6.json  cache-v2-fb2f9925bc8bfc8e016d.json  cmakeFiles-v1-0062d1debd773098dd5e.json  cmakeFiles-v1-06261719bcaeec05cecf.json  cmakeFiles-v1-088cbd2beef1a95da70c.json  cmakeFiles-v1-596fd1ab2df174bbc34d.json  cmakeFiles-v1-934a476959153c134913.json  codemodel-v2-1b97aba305cbc8b33ac6.json  codemodel-v2-5da8a1726759eb576f95.json  codemodel-v2-9792d1242a1f116ce727.json  codemodel-v2-b47d48bb2d68f67ca9c0.json  codemodel-v2-e62a086cb2c3e122b359.json  index-2024-08-02T18-08-29-0393.json  index-2024-08-02T20-45-45-0713.json  index-2024-08-02T21-32-54-0285.json  index-2024-08-03T20-36-52-0705.json  index-2024-08-03T21-25-45-0686.json  target-Continuous-Debug-133b9915691d3583cc64.json  target-Continuous-Debug-90255dbec82ff72668ae.json  target-ContinuousBuild-Debug-8b958e69e604d6ef9e30.json  target-ContinuousBuild-Debug-ae47eebd9327e21362c2.json  target-ContinuousConfigure-Debug-96e1ef5b4c6178c1e305.json  target-ContinuousConfigure-Debug-a85c5281122a49ec4ef5.json  target-ContinuousCoverage-Debug-6fd6699c999566d2d872.json  target-ContinuousCoverage-Debug-f993bbc833afccd627e8.json  target-ContinuousMemCheck-Debug-31b28feedb4223126d26.json  target-ContinuousMemCheck-Debug-d9aef74a0c207af18b53.json  target-ContinuousStart-Debug-47f248070d5102453cb0.json  target-ContinuousStart-Debug-f148015f336fc933ced4.json  target-ContinuousSubmit-Debug-4066f974ee026d578f81.json  target-ContinuousSubmit-Debug-a02176b868a493efb886.json  target-ContinuousTest-Debug-59442947ef9445253dc8.json  target-ContinuousTest-Debug-7579494a485fe79ffb1d.json  target-ContinuousUpdate-Debug-a4ce30854233d84d81e7.json  target-ContinuousUpdate-Debug-fcd62085c11393b99b59.json  target-Experimental-Debug-a43dce37f74e40cb0897.json  target-Experimental-Debug-e84899cf8599682db476.json  (+41 more)
Builds/C:/Users/Justin/Desktop/Projects/Graphics/OpenGL-Renderer/Builds/C:/Users/Justin/Desktop/Projects/Graphics/OpenGL-Renderer/Builds/Testing/: TAG
Builds/C:/Users/Justin/Desktop/Projects/Graphics/OpenGL-Renderer/Builds/C:/Users/Justin/Desktop/Projects/Graphics/OpenGL-Renderer/Builds/Testing/20240803-2101/: Test.xml
Builds/C:/Users/Justin/Desktop/Projects/Graphics/OpenGL-Renderer/Builds/Testing/: TAG
Builds/C:/Users/Justin/Desktop/Projects/Graphics/OpenGL-Renderer/Builds/Testing/20240803-2058/: Test.xml
Builds/Core/: Makefile  cmake_install.cmake
Builds/Testing/: TAG
Builds/Testing/20240802-1808/: Test.xml
Builds/Testing/20240803-1625/: Test.xml
Core/: glad.c
Core/AdditionalLib/include/glad/: glad.h
Core/AdditionalLib/includes/glad/: glad.h
Core/AdditionalLib/lib/: glfw3.lib
Core/AdditionalLib/src/: glad.c
